--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -77,6 +77,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
         app:tabTextColor="@android:color/white" />
 
     <FrameLayout
